add member display feature

--- a/Design_Highlands/QLTV.resx
+++ b/Design_Highlands/QLTV.resx
@@ -2196,7 +2196,7 @@
         pClT/g84waErhzUr3gAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pb_back.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAAIGNIUk0AAHomAACAhAAA+gAAAIDoAAB1
         MAAA6mAAADqYAAAXcJy6UTwAAAAHdElNRQfnAw0PDTt9pvPDAAADdklEQVR4Xu3dS4iNcRjH8ZeFBQsb
